# mock-git-project

./: .gitignore  Pipfile  environment.yml  main.py  project_report.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
debloat_samples/: .flake8  .pre-commit-config.yaml  mock1.py  mock2.py  pyproject.toml  requirements.txt  setup.py  tox.ini
examples/: example3.py
output/: example2_debloated.py  example3_debloated.py  example_debloated.py  requirements.txt.updated  setup.cfg.updated
reports/: project_report.md
src/: ex1.py  example2.py
src/mock_project/: __init__.py  advanced_imports.py  cloud_services.py  data_analysis.py  file_processing.py  main.py  second.py
src/mock_project/utils/: helpers.py
