[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-project"
version = "0.1.0"
description = "A mock Python project for testing dependency removal tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "flask>=2.0.0",
    "django>=4.0.0",
    "fastapi>=0.68.0",
    "sqlalchemy>=1.4.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.0.0",
    "celery>=5.2.0",
    "pydantic>=1.8.0",
    "click>=8.0.0",
    "rich>=12.0.0",
    "typer>=0.4.0",
    "httpx>=0.23.0",
    "aiohttp>=3.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "isort>=5.10.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=2.17.0",
    "sphinx>=4.4.0",
    "coverage>=6.3.0",
    "tox>=3.24.0",
]
test = [
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.7.0",
    "factory-boy>=3.2.0",
]

[project.urls]
Homepage = "https://github.com/example/mock-project"
Documentation = "https://mock-project.readthedocs.io"
Repository = "https://github.com/example/mock-project"
Issues = "https://github.com/example/mock-project/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]