[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mock-project"
version = "0.1.0"
description = "A mock Python project for testing dependency removal tools"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.25.0", "pandas>=1.3.0", "numpy>=1.21.0",
    "matplotlib>=3.4.0", "click>=8.0.0",
    "rich>=12.0.0", "typer>=0.4.0", "httpx>=0.23.0",
    "seaborn>=0.11.0",
    "flask>=2.0.0", "django>=4.0.0", "fastapi>=0.68.0",
    "sqlalchemy>=1.4.0", "pytest>=7.0.0",
    "beautifulsoup4>=4.10.0", "typing-extensions>=4.0.0", "importlib-metadata>=4.0.0",
    # Edge cases with different formatting
    "opencv-python == 4.8.0.74", "Pillow ~= 10.0.0",
    "scikit_learn >= 1.3.0, < 2.0", "tensorflow-gpu != 2.11.0",
    "torch >= 2.0.0; python_version >= '3.8'", "torchvision[extra] >= 0.15.0",
    "jupyter-lab @ git+https://github.com/jupyterlab/jupyterlab.git",
    "custom-package @ file:///path/to/local/package",
    "protobuf >= 3.20.0, != 4.21.0, != 4.21.1", "grpcio >= 1.48.0; sys_platform == 'linux'",
    "pywin32 >= 306; sys_platform == 'win32'", "cryptography >= 3.4.8; extra == 'crypto'",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0", "flake8>=4.0.0", "mypy>=0.950",
    # Edge cases in optional dependencies
    "pre-commit ~= 3.0", "bandit[toml] >= 1.7.0", "safety != 2.2.0",
]
test = [
    "pytest-cov>=4.0.0", "pytest-mock>=3.7.0",
    # More test dependencies with edge cases
    "hypothesis >= 6.0, < 7.0", "factory-boy == 3.3.0", "freezegun ~= 1.2.0",
]
extra = [
    # Completely unused optional dependency group
    "redis >= 4.0.0", "celery[redis] >= 5.2.0", "flower >= 1.2.0",
]
ml = [
    # Machine learning extras with complex requirements
    "scikit-learn >= 1.3.0", "xgboost >= 1.7.0; python_version >= '3.8'",
    "lightgbm != 3.3.5", "catboost >= 1.2.0; sys_platform != 'darwin'",
]

[project.urls]
Homepage = "https://github.com/example/mock-project"
Documentation = "https://mock-project.readthedocs.io"
Repository = "https://github.com/example/mock-project"
Issues = "https://github.com/example/mock-project/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]