[tool.poetry]
name = "mock_project"
version = "0.1.0"
description = "A mock project for testing debloating tools"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25"
yaml = "^5.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
flake8 = "^3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
